# TheD

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
CS/Griretrilr.TheD/: Griretrilr.TheD.sln
Rust/game_logic/src/: lib.rs  modifier.rs
Rust/game_logic/src/battle/: roll.rs
Rust/the_d/: Cargo.toml
Rust/the_d/src/: main.rs
Rust/utils/: Cargo.toml
Rust/utils/src/: lib.rs
game_logic/: Cargo.toml
game_logic/src/: dice.rs  game.rs  lib.rs  modifier.rs  roll.rs  simple_rng.rs
game_logic/src/battle/: dice.rs  dice_set.rs  mod.rs  roll.rs  roll_set.rs  sorted_roll.rs
the_d/: Cargo.toml
the_d/src/: main.rs
utils/: Cargo.toml
utils/src/: len_and_index.rs
