[package]
name = "game_logic"
version = "0.1.0"
authors = ["Griretrilr <griretrilr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[dependencies]
itertools = "0.9.0"

[dependencies.rand]
version = "0.7.3"

[dev-dependencies]
rstest = "0.6.2"