[package]
name = "the_d"
version = "0.1.0"
authors = ["Griretrilr <griretrilr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.game_logic]
path = "../game_logic"
game_logic = "0.1.0"

[dependencies.pancurses]
version = "0.16"
